# App-Market-Sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
doc/: 2026-02-09-ticket1-setup-infraestructura-docker.md  2026-02-09-ticket2-modelado-db-avanzado.md  2026-02-15-ticket3-motor-ingesta-scraper-core.md  2026-02-16-ticket4-data-quality-firewall.md  2026-02-16-ticket5-procesamiento-texto-polars.md  install-mcp-github.md  scraping-module-architecture.md
programa-AI-AppSec/fase1/: fase1.md  tickets.md  visión-del-proyecto.md
src/api/: __init__.py
src/core/: config.py  database.py
src/modules/apps/: __init__.py  models.py
src/modules/scraping/: __init__.py  base.py  client.py  normalizers.py  parsers.py  schemas.py
src/modules/scraping/stores/: __init__.py  apple.py  google.py
src/modules/text_processing/: __init__.py  anonymizers.py  cleaners.py  patterns.py  pipeline.py
src/worker/: __init__.py  tasks.py
tests/: test_models.py  test_scraping.py  test_text_anonymizers.py  test_text_cleaners.py  test_text_pipeline.py  test_validation.py  test_worker_tasks.py
